--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/user-event": "^12.0.2",
     "framer-motion": ">=3.0.0",
     "react": "^17.0.1",
+    "react-datepicker": "^3.4.1",
     "react-dom": "^17.0.1",
     "react-icons": "^3.0.0",
     "react-router-dom": "^5.2.0",
