--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/jest-dom": "^5.9.0",
     "@testing-library/react": "^10.2.1",
     "@testing-library/user-event": "^12.0.2",
+    "axios": "^0.21.1",
     "framer-motion": ">=3.0.0",
     "react": "^17.0.1",
     "react-datepicker": "^3.4.1",
