--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/react": "^10.2.1",
     "@testing-library/user-event": "^12.0.2",
     "axios": "^0.21.1",
+    "date-fns": "^2.16.1",
     "framer-motion": ">=3.0.0",
     "react": "^17.0.1",
     "react-datepicker": "^3.4.1",
