--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-datepicker": "^3.4.1",
     "react-dom": "^17.0.1",
     "react-icons": "^3.0.0",
+    "react-nl2br": "^1.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "web-vitals": "^0.2.2"
